# maze-solver

./: .coverage  .coveragerc  .coveragerc.save  .coveragerc.save.1  .pylintrc  README.md  määrittelydokumentti.md  pyproject.toml  tasks.py  testausdokumentti.md  toteutusdokumentti.md
.github/workflows/: main.yml
src/: main.py  main2.py  maze-solver.py  maze_solver.py  mazes.py  tremaux.py  wall_follower.py
src/tests/: solver_test.py  tremaux_test.py  wall_follower_test.py
src/ui/: grid.py
viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
