[tool.poetry]
name = "maze-solver"
version = "0.1.0"
description = ""
authors = ["Aarni <aarni.miikkulainen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "maze_solver"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
